--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -257,7 +258,7 @@
 					stroke-linejoin="round"
 				/>
 			</g>
-			<g filter="url(#filter3_dd_228_14471)">
+			<g class="tableAnimation">
 				<rect
 					x="365.875"
 					y="179"
@@ -321,7 +322,7 @@
 					/>
 				</g>
 			</g>
-			<g filter="url(#filter4_dd_228_14471)" class="bg-img">
+			<g class="bg-img">
 				<rect
 					x="127"
 					y="158"
